Fix:Prevent contact section overlapping with skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -601,8 +601,7 @@ section {
   white-space: nowrap;
 }
 #skills {
-  margin-bottom: 200px;
-  padding-bottom: 180px;
+  padding-bottom: 200px;
   position:relative;
   overflow: visible;
   z-index:1; /* gives space after skills before contact starts */
